# advanced_audio_player

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  advanced_audio_player.code-workspace  conanfile.txt
app/: CMakeLists.txt  main.cpp
assets/css/: file_explorer.css  file_manager.css  keyframe_editor.css  loading.css  main.css  main_controls.css  main_menu.css  waveform_data.css
cmake/: AddGitSubmodule.cmake
config/: config.hpp.in
src/: CMakeLists.txt  glad.c  stb.c
src/advanced_audio_player/: CMakeLists.txt  advanced_audio_player.cpp  custom_file.cpp  file_getters.cpp  file_setters.cpp  thread_funcs.cpp  update_buffer_data.cpp
src/advanced_audio_player/include/advanced_audio_player/: advanced_audio_player.hpp
src/audio_player_gui/: CMakeLists.txt  scrollbar.cpp
src/audio_player_gui/include/audio_player_gui/: audio_player_gui.hpp  scrollbar.hpp  waveform.hpp
src/audio_player_gui/waveform/: draw.cpp  draw_utility.cpp  inputs_escape_key.cpp  inputs_lmb_down.cpp  inputs_lmb_type.cpp  inputs_set_cursor.cpp  inputs_zoom_and_panning.cpp  waveform.cpp
src/draw_loops/: CMakeLists.txt  menu_loop.cpp  menu_loop_update_new_project_files.cpp  menu_loop_update_projects.cpp
src/draw_loops/include/draw_loops/: draw_loops.hpp  main_loop.hpp  menu_loop.hpp
src/draw_loops/main_loop/: callbacks.cpp  create_key_handler.cpp  frame_progress.cpp  keyframe_editor_callbacks.cpp  keyframe_editor_gui.cpp  loading_gui.cpp  main_controls_gui.cpp  main_loop.cpp  update_file_manager.cpp  update_files_and_file_manager_callback.cpp  update_waveform_data.cpp  waveform_callbacks.cpp  waveform_data_callbacks.cpp  waveform_lmb_type_gui.cpp  while_loop.cpp
src/file_explorer/: CMakeLists.txt  btmbar_gui.cpp  callbacks.cpp  directories.cpp  file_explorer.cpp  sidebar_gui.cpp  topbar_gui.cpp  update.cpp
src/file_explorer/include/file_explorer/: file_explorer.hpp
src/lc_audio/: CMakeLists.txt  engine.cpp  engine_thread.cpp
src/lc_audio/include/lc_audio/: beats.hpp  common.hpp  engine.hpp  file.hpp  filters.hpp
src/lc_gui/: CMakeLists.txt
src/lc_gui/basic_elements/: text_element.cpp  text_input_element.cpp
src/lc_gui/element/: class_list.cpp
src/lc_gui/include/lc_gui/: common.hpp  element.hpp
src/lc_gui/include/lc_gui/basic_elements/: text_element.hpp  text_input_element.hpp
src/lc_utility/: CMakeLists.txt  binary_file.cpp
src/lc_utility/include/lc_utility/: binary_file.hpp  lc_utility.hpp
src/main/: CMakeLists.txt  files.cpp  window_position.cpp
src/main/include/main/: files.hpp  main.hpp  window_position.hpp
